# illdashboard

./: .gitignore  README.md  REWRITE_REPORT.md  justfile
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/scripts/: migrate_schema.py
backend/src/illdashboard/: __init__.py  cli.py  config.py  copilot_service.py  database.py  database_migrations.py  main.py  medications_database.py  medications_dates.py  medications_models.py  metrics.py  models.py  routes.py  schemas.py  sparkline.py
backend/src/illdashboard/api/: __init__.py  admin.py  ai.py  events.py  export.py  files.py  measurements.py  medications.py  search.py  tags.py
backend/src/illdashboard/copilot/: __init__.py  client.py  explanations.py  extraction.py  mistral_client.py  normalization.py
backend/src/illdashboard/services/: __init__.py  admin.py  file_types.py  insights.py  jobs.py  markers.py  ocr.py  ocr_ingestion.py  ocr_workflow.py  pipeline.py  qualitative_values.py  rescaling.py  schema.py  search.py  upload_metadata.py
backend/tests/: conftest.py  test_admin_reset.py  test_api.py  test_config.py  test_copilot_modules.py  test_copilot_service.py  test_database.py  test_database_migrations.py  test_events.py  test_insights.py  test_marker_tags.py  test_medications.py  test_metrics.py  test_normalization_dedup.py  test_ocr_service.py
docs/: README.md  artifact-first-pipeline.md  legacy-queue-backed-ocr-request-flow.md  queue-backed-ocr-request-flow.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+34 files in other folders)
