[project]
name = "illdashboard"
version = "0.1.0"
description = "Local health data portal – upload labs, OCR, visualize trends"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "mistralai>=1,<3",
    "python-multipart>=0.0.19,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "github-copilot-sdk",
    "pymupdf>=1.25,<2",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27,<1",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/illdashboard"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
